--- a/css/style.css
+++ b/css/style.css
@@ -128,3 +128,8 @@ button.deny:hover {
     justify-content: space-between;
     align-items: center;
 }
+
+.login-form {
+    max-width: 400px;
+    margin: auto;
+}
